--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-Cybordz
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-13V1S04HNQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-13V1S04HNQ');
+    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Penitent" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+</head>
+<body id="cybordz">
+<div class="strip-container cybordz">
+    <div class="strip">
+        <a href="https://cybordz.com"><img alt="Cybordz" class="title" src="images/cybordz/title-logo.png" /></a>
+        <h3 class="subtitle">A skateboarding game where you score big to add time to the clock. Combine random items to boost your score in unexpected ways.</h3>
+
+        <h2>Save your spot for&nbsp;the Beta</h2>
+        <p>
+            I send out <i>monthly updates</i> to anyone interested in staying in touch.  I will also use this mailing
+            list as the main source of recruiting playtesters!
+        </p>
+        <p>
+            Save your spot by subscribing below. Be one of the first players to play the game!
+        </p>
+        <div id="mc_embed_shell">
+            <div id="mc_embed_signup">
+                <form action="https://games.us13.list-manage.com/subscribe/post?u=bb105755b056d4b53ee93aa4c&amp;id=d498d493fc&amp;f_id=00bb1de9f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                    <div id="mc_embed_signup_scroll">
+                        <div class="mc-field-group"><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" placeholder="Email Address"></div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                            /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                            <input type="text" name="b_bb105755b056d4b53ee93aa4c_d498d493fc" tabindex="-1" value="">
+                        </div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="footer" class="strip-container">
+    <div class="strip">
+        <div>
+            <a href="https://penitent.games">
+                <img class="logo" alt="logo" src="images/logo-250.png" />
+            </a>
+            <div>&copy; 2025 Penitent Games, LLC</div>
+            <br/>
+            <a href="https://discord.gg/eE64ZmNfAQ" class="discord">
+                <img src="images/icon_clyde_white_RGB.png"  alt="discord" />
+            </a>
+            <a href="https://x.com/penitent_games" class="x">
+                <img src="images/logo-white.png"  alt="X" />
+            </a>
+        </div>
+    </div>
+</div>
+</body>
+</html>
