--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="strip-container cybordz">
     <div class="strip">
         <a href="https://cybordz.com"><img alt="Cybordz" class="title" src="images/cybordz/title-logo.png" /></a>
-        <h3 class="subtitle">A skateboarding game where you score big to add time to the clock. Combine random items to boost your score in unexpected ways.</h3>
+        <h1 class="subtitle">A skateboarding game where you score big to add time to the clock. Combine random items to boost your score in unexpected ways.</h1>
 
         <h2>Save your spot for&nbsp;the Beta</h2>
         <p>
@@ -62,6 +62,7 @@
         </div>
     </div>
 </div>
+<div class="transition bottom"></div>
 <div id="footer" class="strip-container">
     <div class="strip">
         <div>
