Adding umami event for subscribing to mailing list

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="optionalParent">
                             <div class="clear foot">
-                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                                <input type="submit" data-umami-event="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
                             </div>
                         </div>
                     </div>
